common-applications/control/playground-webiste-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: playground-website-frontend
  name: playground-website-frontend
