common-applications/control/playground-webiste-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: playground-website-frontend-ingress
  namespace: playground-website-frontend
spec:
  tls:
    - hosts:
        - playground.osinfra.cn
      secretName: playground-website-frontend-tls-secret
  rules:
    - host: playground.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: playground-website-frontend-service
              servicePort: 80
            path: /
